// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="ceo7z38 soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="chkciqb soui-radio-indicator-wrapper"
  >
    <span
      class="cp0qpb4 soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-v30ja8 soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="cuvzs0g soui-radio-group"
>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="cuvzs0g soui-radio-group c-84b9jy soui-radio-group-button c-2jrx9b soui-button-group"
  dir="ltr"
>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="cuvzs0g soui-radio-group c-84b9jy soui-radio-group-button c-2jrx9b soui-button-group"
  dir="ltr"
>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button cd17ack soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button cd17ack soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked cq4fg10 soui-button-primary c-abf4z4 soui-button-button cd17ack soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button cd17ack soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button cd17ack soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button cd17ack soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button cd17ack soui-button-outline"
    dir="ltr"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="cuvzs0g soui-radio-group"
>
  <div
    class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="cuvzs0g soui-radio-group"
>
  <div
    class="ceo7z38 soui-radio-wrapper ck4u1og soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper ck4u1og soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper ck4u1og soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper ck4u1og soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper ck4u1og soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper ck4u1og soui-radio-wrapper-disabled c875odf soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper ck4u1og soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="cuvzs0g soui-radio-group"
>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper ck4u1og soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="cuvzs0g soui-radio-group"
>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="cuvzs0g soui-radio-group"
>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="ceo7z38 soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="chkciqb soui-radio-indicator-wrapper"
    >
      <span
        class="cp0qpb4 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-v30ja8 soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cuvzs0g soui-radio-group c-84b9jy soui-radio-group-button c-2jrx9b soui-button-group"
    dir="ltr"
  >
    <button
      class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked cq4fg10 soui-button-primary c-abf4z4 soui-button-button c-2d9vo7 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button c-2d9vo7 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button c-2d9vo7 soui-button-small"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="cuvzs0g soui-radio-group c-84b9jy soui-radio-group-button c-2jrx9b soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked cq4fg10 soui-button-primary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="cuvzs0g soui-radio-group c-84b9jy soui-radio-group-button c-2jrx9b soui-button-group"
    dir="ltr"
    style="margin-top: 24px;"
  >
    <button
      class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked cq4fg10 soui-button-primary c-abf4z4 soui-button-button c-2hbr6r soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button c-2hbr6r soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="ceo7z38 soui-radio-wrapper c-nriuju soui-button-secondary c-abf4z4 soui-button-button c-2hbr6r soui-button-large"
      dir="ltr"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="ceo7z38 soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="chkciqb soui-radio-indicator-wrapper"
  >
    <span
      class="cp0qpb4 soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-v30ja8 soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
